tests/baselines/reference/importDeclWithExportModifier.errors.txt
tests/cases/compiler/importDeclWithExportModifier.ts(5,19): error TS2304: Cannot find name 'x'.
tests/cases/compiler/importDeclWithExportModifier.ts(5,21): error TS2694: Namespace 'x' has no exported member 'c'.


==== tests/cases/compiler/importDeclWithExportModifier.ts (2 errors) ====
    module x {
        interface c {
        }
    }
    export import a = x.c;
                      ~
!!! error TS2304: Cannot find name 'x'.
                        ~
!!! error TS2694: Namespace 'x' has no exported member 'c'.
    var b: a;
    